--- a/src/assets/scss/tools/_tokens.scss
+++ b/src/assets/scss/tools/_tokens.scss
@@ -5,7 +5,8 @@ $tokens: (
     base-line-height: 1.5,
     heading-line-height: 1.1,
     content-width: 60rem,
-    content-gutter: var(--size-m),
+    content-gutter: 1rem,
+    scrollbar-gutter: 15px,
     base-duration: 250ms
   ),
   vars: (
